Bug fix (card bg color) on iOS devices

--- a/src/components/AmiiboCard/AmiiboCard.module.css
+++ b/src/components/AmiiboCard/AmiiboCard.module.css
@@ -28,6 +28,8 @@
     z-index: 1;
     scale: 102%;
     box-shadow: 0 10px 15px rgba(16, 37, 55, 0.35);
+    color: rgba(0,0,0,0);
+    text-decoration: none;
 }
 
 .myCard .bgCard {
